<resources>
    <string name="app_name">SaveMyHeart</string>
    <string name="title_activity_home_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ad_flag">Ad</string>
    <string name="AdId">testu7m3hc4gvm</string>
    <string name="Timer">Timer: </string>
    <string name="Seconds">sec</string>
    <string name="Selected">You selected a </string>
    <string name="activity_recognition">ACTIVITY_RECOGNITION</string>
    <string name="activity_name">Name</string>
    <string name="activity_value">Value</string>
    <string name="active">Active</string>
    <string name="in_active">InActive</string>
    <string name="no_notifications_available">No notifications available!</string>
    <string name="heartRateInitialValue">00</string>
    <string name="heart_rate_at_risk_msg">Your heart rate at risk!</string>
    <string name="heart_rate_at_risk_high">heart rate is too high..</string>
    <string name="heart_rate_at_risk_low">heart rate is too low..</string>
    <string name="deivce_exception">device exception</string>
    <string name="someting_went_wrong">Something went wrong</string>
    <string name="wear_band">1. Make sure you wear the Honor band!\n2. Make sure you given Location permission!</string>
    <string name="dialog">dialog</string>
    <string name="hr_info">hr_info</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_00">00</string>
    <string name="no_breeds_were_returned">No breeds were returned.</string>
    <string name="more">More</string>
    <string name="result_code_10803">10803</string>
    <string name="fail">onFailure</string>
    <string name="success">create onSuccess</string>
    <string name="length">length:</string>
    <string name="name">Name</string>
    <string name="val">Value</string>
    <string name="createActivityIdentificationUpdates">createActivityIdentificationUpdates onSuccess</string>
    <string name="mess">Message</string>
    <string name="ad_id">testw6vs28auh3</string>
    <string name="banner_size">BANNER_SIZE_320_100</string>
    <string name="ad_id_native">testu7m3hc4gvm</string>
    <string name="onAdFailed">\"onAdFailed : errorCode \"</string>
    <string name="java">java</string>
    <string name="kotlin">kotlin</string>
    <string name="URL">https://www.huawei.com/healthkit/extend/realtimeheart.read</string>
</resources>
