<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_kt">

    <fragment
        android:id="@+id/navigation_home_kt"
        android:name="com.huawei.healthkitsampleapp.kotlin.ui.home.HomeKotlinFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_kotlin" />

    <fragment
        android:id="@+id/navigation_dashboard_kt"
        android:name="com.huawei.healthkitsampleapp.kotlin.ui.dashboard.DashboardKotlinFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard_kt" />

    <fragment
        android:id="@+id/navigation_notifications_kt"
        android:name="com.huawei.healthkitsampleapp.kotlin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>