<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hwads="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="position"
            type="java.lang.Integer" />

        <variable
            name="viewModel"
            type="com.huawei.healthkitsampleapp.kotlin.ui.dashboard.DashboardKotlinViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bannerview"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/statusType"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/_14dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_14dp">

                <TextView
                    android:id="@+id/minHeartRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mText.minHeartRate}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maxHeartRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@{viewModel.mText.maxHeartRate}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/heart_rate"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/my_imageview"
                        android:layout_width="@dimen/_200dp"
                        android:layout_height="@dimen/_200dp"
                        android:layout_gravity="center"
                        android:src="@drawable/myheart" />

                    <TextView
                        android:id="@+id/heart_rate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:gravity="center"
                        android:text="@string/_00"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_30sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <com.huawei.hms.ads.banner.BannerView
            android:id="@+id/bannerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            hwads:adId="@string/ad_id"
            hwads:bannerSize="@string/banner_size" />
    </RelativeLayout>

</layout>